--- a/hidden_voices_frontend/src/app/app.component.html
+++ b/hidden_voices_frontend/src/app/app.component.html
@@ -11,3 +11,7 @@
 <div style="margin-top: 1em">
   <app-summarize [name]="name" [triples]="triples"></app-summarize>
 </div>
+<ng-container *ngIf="activeServices">
+  <div class="overlay"></div>
+  <p-progressSpinner class="spinner" strokeWidth="4"></p-progressSpinner>
+</ng-container>
