--- a/hidden_voices_frontend/src/app/features/scrape/scrape.component.html
+++ b/hidden_voices_frontend/src/app/features/scrape/scrape.component.html
@@ -1,5 +1,11 @@
 <h2>Name</h2>
-<input pInputText type="text" class="outline-text" [(ngModel)]="name" />
+<input
+  pInputText
+  type="text"
+  class="outline-text"
+  [(ngModel)]="name"
+  (change)="nameChange()"
+/>
 <button
   pButton
   pRipple
