--- a/hidden_voices_frontend/src/app/app.component.html
+++ b/hidden_voices_frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
+<p-menubar [model]="items"></p-menubar>
 <div>
   <app-scrape (scrapedContentEvent)="updateScrapedContent($event)"></app-scrape>
 </div>
