--- a/hidden_voices_frontend/src/app/features/scrape/scrape.component.html
+++ b/hidden_voices_frontend/src/app/features/scrape/scrape.component.html
@@ -1,16 +1,1 @@
-<h2>Name</h2>
-<input
-  pInputText
-  type="text"
-  class="outline-text"
-  [(ngModel)]="name"
-  (change)="nameChange()"
-/>
-<button
-  pButton
-  pRipple
-  type="button"
-  label="Scrape"
-  class="p-button"
-  (click)="scrapeData()"
-></button>
+<p>scrape works!</p>
