New UI layout added.

--- a/hidden_voices_frontend/src/app/app.component.html
+++ b/hidden_voices_frontend/src/app/app.component.html
@@ -1,2 +1,4 @@
 <p-menubar [model]="items"></p-menubar>
 <router-outlet></router-outlet>
+<p-toast></p-toast>
+<p-confirmDialog [style]="{ width: '450px' }"></p-confirmDialog>
