--- a/hidden_voices_frontend/src/app/features/generate-helper/generate-helper.component.html
+++ b/hidden_voices_frontend/src/app/features/generate-helper/generate-helper.component.html
@@ -1,5 +1,8 @@
-<app-scraped-text *ngIf="component == 'scraped-text'"></app-scraped-text>
-<app-factoids *ngIf="component == 'factoids'"></app-factoids>
+<app-scraped-text
+  *ngIf="component == 'scraped-text'"
+  [name]="name"
+></app-scraped-text>
+<app-factoids *ngIf="component == 'factoids'" [name]="name"></app-factoids>
 <app-summarized-text
   *ngIf="component == 'summarized-text'"
 ></app-summarized-text>
