--- a/hidden_voices_frontend/src/app/features/scraped-text/scraped-text.component.html
+++ b/hidden_voices_frontend/src/app/features/scraped-text/scraped-text.component.html
@@ -1,1 +1,4 @@
-<app-crud-table [items]="items"></app-crud-table>
+<app-crud-table [(items)]="items"></app-crud-table>
+<div class="center">
+  <p-button label="GENERATE FACTOIDS" (click)="generateFactoids()"></p-button>
+</div>
