--- a/hidden_voices_frontend/src/app/features/summarized-text/summarized-text.component.html
+++ b/hidden_voices_frontend/src/app/features/summarized-text/summarized-text.component.html
@@ -1,1 +1,7 @@
-<textarea rows="20" cols="90" pInputTextarea style="resize: none"></textarea>
+<textarea
+  rows="25"
+  cols="90"
+  pInputTextarea
+  style="resize: none"
+  [(ngModel)]="article"
+></textarea>
