--- a/hidden_voices_frontend/src/app/features/factoids/factoids.component.html
+++ b/hidden_voices_frontend/src/app/features/factoids/factoids.component.html
@@ -1,1 +1,4 @@
-<app-crud-table [items]="items"></app-crud-table>
+<app-crud-table [(items)]="items"></app-crud-table>
+<div class="center">
+  <p-button label="SUMMARIZE CONTENT" (click)="summarizeContent()"></p-button>
+</div>
