Scrape component completed.

--- a/hidden_voices_frontend/src/app/features/crud-table/crud-table.component.html
+++ b/hidden_voices_frontend/src/app/features/crud-table/crud-table.component.html
@@ -73,7 +73,7 @@
         <td>
           <textarea
             rows="5"
-            cols="30"
+            [cols]="cols"
             pInputTextarea
             style="resize: none"
             [(ngModel)]="item.text"
