--- a/hidden_voices_frontend/src/app/features/scrape/scrape.component.html
+++ b/hidden_voices_frontend/src/app/features/scrape/scrape.component.html
@@ -9,7 +9,8 @@
     pInputText
     placeholder="Name"
     [(ngModel)]="name"
-    required
+    pTooltip="Mandatory"
+    tooltipPosition="bottom"
   />
   <input
     type="text"
@@ -17,7 +18,8 @@
     placeholder="Institute"
     [(ngModel)]="institute"
     style="margin-left: 10px"
-    required
+    pTooltip="Mandatory"
+    tooltipPosition="bottom"
   />
   <p-button
     label="SCRAPE CONTENT"
