--- a/hidden_voices_frontend/src/app/features/scrape/scrape.component.html
+++ b/hidden_voices_frontend/src/app/features/scrape/scrape.component.html
@@ -11,6 +11,7 @@
     [(ngModel)]="name"
     pTooltip="Mandatory"
     tooltipPosition="bottom"
+    (change)="updateName()"
   />
   <input
     type="text"
