Minor UI Changes

--- a/hidden_voices_frontend/src/app/features/generate/generate.component.html
+++ b/hidden_voices_frontend/src/app/features/generate/generate.component.html
@@ -3,7 +3,12 @@
   <p-progressSpinner class="spinner" strokeWidth="4"></p-progressSpinner>
 </ng-container>
 
-<p-carousel [value]="components" [numVisible]="2" [numScroll]="1">
+<p-carousel
+  [value]="components"
+  [numVisible]="2"
+  [numScroll]="1"
+  [responsiveOptions]="responsiveOptions"
+>
   <ng-template pTemplate="header">
     <div style="margin-left: 60px; margin-top: 10px">
       <input
