--- a/hidden_voices_frontend/src/app/features/summarized-text/summarized-text.component.html
+++ b/hidden_voices_frontend/src/app/features/summarized-text/summarized-text.component.html
@@ -1,7 +1,3 @@
-<textarea
-  rows="25"
-  cols="90"
-  pInputTextarea
-  style="resize: none"
-  [(ngModel)]="article"
-></textarea>
+<div class="wrapper">
+  <textarea pInputTextarea [(ngModel)]="article"></textarea>
+</div>
